// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doesn't ignore node_modules with --with-node-modules flag (stderr) 1`] = `""`;

exports[`doesn't ignore node_modules with --with-node-modules flag (stdout) 1`] = `
"nested/node_modules/node-module.js
node_modules/node-module.js
not_node_modules/file.js
regular-module.js
"
`;

exports[`doesn't ignore node_modules with --with-node-modules flag (write) 1`] = `Array []`;

exports[`doesn't ignore node_modules with --with-node-modules flag for file list (stderr) 1`] = `""`;

exports[`doesn't ignore node_modules with --with-node-modules flag for file list (stdout) 1`] = `
"node_modules/node-module.js
not_node_modules/file.js
nested/node_modules/node-module.js
regular-module.js
"
`;

exports[`doesn't ignore node_modules with --with-node-modules flag for file list (write) 1`] = `Array []`;

exports[`ignores node_modules by default (stderr) 1`] = `""`;

exports[`ignores node_modules by default (stdout) 1`] = `
"not_node_modules/file.js
regular-module.js
"
`;

exports[`ignores node_modules by default (write) 1`] = `Array []`;

exports[`ignores node_modules by default for file list (stderr) 1`] = `""`;

exports[`ignores node_modules by default for file list (stdout) 1`] = `
"not_node_modules/file.js
regular-module.js
"
`;

exports[`ignores node_modules by default for file list (write) 1`] = `Array []`;

exports[`ignores node_modules by with ./**/*.js (stderr) 1`] = `""`;

exports[`ignores node_modules by with ./**/*.js (stdout) 1`] = `
"not_node_modules/file.js
regular-module.js
"
`;

exports[`ignores node_modules by with ./**/*.js (write) 1`] = `Array []`;
